# python-duco-client

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  README.md  duco_inventory.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: api-reference.md  cli.md  error-handling.md  index.md  quickstart.md
scripts/: demo.py  inventory.py
src/duco/: __init__.py  _ssl.py  cli.py  client.py  exceptions.py  models.py
src/duco/certs/: duco_ca.pem
tests/: conftest.py  test_client.py  test_models.py  test_ssl.py
tests/integration/: test_client_live.py
