[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-duco-client"
version = "0.3.3"
description = "Async Python client for the Duco ventilation API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ronald van der Meer" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "aioresponses>=0.7",
    "mypy>=1.8",
    "ruff>=0.3",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/ronaldvdmeer/python-duco-client"
Repository = "https://github.com/ronaldvdmeer/python-duco-client"
Issues = "https://github.com/ronaldvdmeer/python-duco-client/issues"

[project.scripts]
duco = "duco.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
duco = ["py.typed"]

# -- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--ignore=tests/integration",
    "--cov=duco",
    "--cov-report=term-missing",
    "-v",
]
markers = [
    "integration: marks tests as integration tests requiring a live Duco box (deselect with '-m not integration')",
]

# -- coverage ----------------------------------------------------------------
[tool.coverage.run]
source = ["src/duco"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]
show_missing = true

# -- ruff -------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# -- mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
